<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mio.userauthentication.Activity.InputTestActivity">


    <Button
        android:id="@+id/button_vibrate_type_mors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:onClick="buttonVibrateTypeMorsClick"
        android:text="@string/input_vibrate_type_mors" />

    <Button
        android:id="@+id/button_vibrate_type_bin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_vibrate_type_mors"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:onClick="buttonVibrateTypeBinClick"
        android:text="@string/input_vibrate_type_bin" />


    <Button
        android:id="@+id/button_vibrate_type_sel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_vibrate_type_bin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:onClick="buttonVibrateTypeSelClick"
        android:text="@string/input_vibrate_type_sel" />
</RelativeLayout>
